# OpenPSG

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
boards/: README.md
boards/libraries/3dmodels/: LAN8742A-CZ-TR.step  RJJ0023B.step  XGZP160040S.step
boards/libraries/footprints/: QFN50P400X400X100-25N.kicad_mod  RJJ23_TEX.kicad_mod  SOP65P640X120-14N.kicad_mod  SOP8.kicad_mod
boards/libraries/symbols/: CS1237.kicad_sym  LAN8742A-CZ-TR.kicad_sym  TPS23753APWR.kicad_sym  TPS23758RJJR.kicad_sym
boards/poe_splitter/: README.md  fp-lib-table  poe_splitter.kicad_pro  poe_splitter.kicad_sch  sym-lib-table
boards/pressure_sensor/: fp-lib-table  pressure_sensor.kicad_pro  pressure_sensor.kicad_sch  sym-lib-table
docs/: ecg.md  ncpt.md
recorder/: .gitignore  README.md  go.mod  go.sum  main.go
recorder/internal/dhcp/: dhcp.go
recorder/internal/leasedb/: leasedb.go  leasedb_test.go
recorder/internal/netutil/: cidr.go  cidr_test.go  iface_linux.go
recorder/internal/termutil/: clear.go
recorder/openpsg/: client.go  discover.go  openpsg.go  record.go
scripts/: notch_filter.py
scripts/biquad_filter/: highpass.py  notch.py
src/: api.rs  biquad_filter.rs  cs1237.rs  cs1237_spi.rs  embassy_sntpc.rs  main.rs  ncpt.rs  net_util.rs  task.rs  time.rs
